# course-PyETL

./: .gitignore  .pre-commit-config.yaml  Pipfile  pandas_practice.ipynb  pyproject.toml  requirements.txt
part01_basic/: 00_simpleWayToOpenUrl.py  01_requestWithHeaders.py  02_beautifulSoupUsage.py  03_subqueryInBeautifulSoupWithFindAll.py  04_queryWithSelect.py  05_requestByRequests.py
part02_pttArticleWithCookie/: 01_pttMovie.py  02_pttMoviePagesByUrl.py  03_pttMoviePagesByTag.py  04_pttMovieEveryPageArticle.py  05_pttGossipingWithCookies.py
part03_requestWithPost/: 00_simpleWayToOpenUrlWithData.py  01_simpleWayToRequestWithData.py  02_getHiddenValue.py  03_pccGov.py  04_organic_gov.ipynb  05_highway.ipynb
part04_cookiesAndSession/: 00_cookieWithUrllib.py  01_cookieWithRequests.py  02_cookieInSession.py  03_getPttCookieBySession.py
part05_dcardArticleWithJson/: 00_dcardPhotographyArticle.py  01_dcardPhotographyImage.py  02_techOrange.py  03_example2.py  04_dcard_new-api.ipynb  04_dcard_new_api.ipynb  05_newmobilelife.py  06_nownews.py
part05_dynamicWebPage/: 00_dcardPhotographyArticle.py  01_dcardPhotographyImage.py  02_techOrange.py  03_example2.py  04_dcard_new_api.ipynb  05_newmobilelife.py  06_nownews.py
part06_usefulPackages/: 00_jieba.ipynb  00_pttCutWord.ipynb  01_pandas.ipynb  01_pttToCsv.ipynb  02_pandas_read_html.ipynb  mydict.txt  pttGossiping.csv  pttGossiping_c.csv  stopword.txt  test_pandas.csv
part07_selenium/: 00_seleniumUsage.py  01_scrollDown.py  02_sendKeys.py  03_sendKeyFB.py  04_dcard.py  05_dcard_undetected_chromedriver.py  (+2 more)
(+556 files in other folders)
