[project]
name = "course-pyetl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "undetected-chromedriver>=3.5.5",
]
